Help: fix overflow

--- a/public/details/detail.style.css
+++ b/public/details/detail.style.css
@@ -288,6 +288,8 @@
     flex-wrap: nowrap;
     align-items: flex-start;
 
+	overflow-x: auto;
+
 	font-size: 0.85em;
 }
 .detail .clues .clue {
